# rag-embedding-eval

./: LICENSE  README.md  pyproject.toml
cases/: base_chs.json  test.json
codedog_sdk/chains/: __init__.py
codedog_sdk/utils/: langchain_utils.py
docs/: architecture.excalidraw
embedding_benchmark/: analysis.py  app.py  embedding.py  grimoire.py  test.py
results/: base_chs.json  test.json
